# sysperf-svr

./: .gitignore  Cargo.toml  README.md  config.toml  debian.nix  flake.nix  prep.sh
adapters/: Cargo.toml
adapters/src/: lib.rs  log_adapter.rs
application/: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
domain/: Cargo.toml
ports/: Cargo.toml
ports/src/: lib.rs  log_port.rs
src/: lib.rs  main.rs
src/adapters/: benchmark_adapter.rs  database_adapter.rs  log_adapter.rs  metrics_adapter.rs  mod.rs
src/application/: application.rs
src/cli/: cli_struct.rs  commands.rs  mod.rs
src/database/: mod.rs
src/domain/: mod.rs
src/domain/metrics/: cpuinfo.rs  iostat.rs  loadavg.rs  meminfo.rs  mod.rs  mpstat.rs  vmstat.rs
src/domain/storage/: fio.rs  mod.rs
src/ports/: benchmark_port.rs  database_port.rs  log_port.rs  metrics_port.rs  mod.rs  storage_port.rs
