[package]
name = "sysperf-svr"
version = "0.1.0"
edition = "2021"

[dependencies]
# Existing dependencies...

# System metrics collection
sysinfo = "0.29.10"        # For CPU, memory, disk usage
procfs = "0.15.1"          # Linux-specific detailed metrics
heim = "0.1.0-rc.1"        # Cross-platform system information
cpu-time = "1.0.0"         # CPU time measurements

# Performance measurement
criterion = "0.5.1"        # Statistical benchmarking
iai = "0.1"               # Cycle-accurate benchmarking
perf-event = "0.4"        # Linux perf events API

# Async runtime (if needed)
tokio = { version = "1.32", features = ["full"] }

# Visualization and reporting
plotters = "0.3"          # For generating performance graphs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"        # For JSON output format

# Hardware-specific metrics
raw-cpuid = "10.6"        # CPU information and features
hwloc = "0.5"            # Hardware topology detection

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

